--- a/Thesis/NP_main.tex
+++ b/Thesis/NP_main.tex
@@ -28,7 +28,7 @@
 \pagestyle{empty}
 
 \title{ %% {\it \huge Thesis Proposal}\\
-{\bf An evaluation of the interstitial beat across varied modalities for characterization of a meaningful haptic enviro-sensing metronome}}
+{\bf An evaluation of the interstitial beat across multisensory modalities for characterization of a meaningful haptic enviro-sensing metronome}}
 \author{Nick Pourazima}
 \date{May 2018}
 \Year{2018}
@@ -46,7 +46,7 @@ Professor Jesse Stiles \\
 % copyright notice generated automatically from Year and author.
 % permission added if \permission{} given.
 
-\keywords{haptic, metronome, modality, entrainment}
+\keywords{sensorimotor synchronization, vibrotactile perception, haptic, metronome, modality, entrainment}
 
 \maketitle
 
