intro+background+more prior research filled out

--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -1,9 +1,3 @@
-@misc{TUG2017,
-    author = {TUG},
-    title = {{TeX Live}},
-    url = {https://www.tug.org/texlive/},
-    year = {2017}
-}
 @article{ammirante2016synchronizing,
   title={Synchronizing to auditory and tactile metronomes: a test of the auditory-motor enhancement hypothesis},
   author={Ammirante, Paolo and Patel, Aniruddh D and Russo, Frank A},
@@ -12,5 +6,48 @@
   number={6},
   pages={1882--1890},
   year={2016},
+  publisher={Springer}
+}
+@article{brochard2008evidence,
+  title={Evidence of beat perception via purely tactile stimulation},
+  author={Brochard, Renaud and Touzalin, Pascale and Despr{\'e}s, Olivier and Dufour, Andr{\'e}},
+  journal={Brain research},
+  volume={1223},
+  pages={59--64},
+  year={2008},
+  publisher={Elsevier}
+}
+@article{gan2015synchronization,
+  title={Synchronization to a bouncing ball with a realistic motion trajectory},
+  author={Gan, Lingyu and Huang, Yingyu and Zhou, Liang and Qian, Cheng and Wu, Xiang},
+  journal={Scientific reports},
+  volume={5},
+  pages={11974},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+@inproceedings{kosonen2006rhythm,
+  title={Rhythm perception through different modalities},
+  author={Kosonen, Katri and Raisamo, Roope},
+  booktitle={Proc. EuroHaptics},
+  pages={365--370},
+  year={2006}
+}
+@inproceedings{jokiniemi2008crossmodal,
+  title={Crossmodal rhythm perception},
+  author={Jokiniemi, Maria and Raisamo, Roope and Lylykangas, Jani and Surakka, Veikko},
+  booktitle={International Workshop on Haptic and Audio Interaction Design},
+  pages={111--119},
+  year={2008},
+  organization={Springer}
+}
+@article{repp2013sensorimotor,
+  title={Sensorimotor synchronization: a review of recent research (2006--2012)},
+  author={Repp, Bruno H and Su, Yi-Huang},
+  journal={Psychonomic bulletin \& review},
+  volume={20},
+  number={3},
+  pages={403--452},
+  year={2013},
   publisher={Springer}
 }
