--- a/Thesis/thesis-abstract.tex
+++ b/Thesis/thesis-abstract.tex
@@ -15,6 +15,6 @@ The objective of this work is to display whether a continuous wave, one which le
 
 Ancillary to this work, a haptic wearable design is prototyped and evaluated for optimization of physical spacing with an overarching goal of communicating dynamic changes more effectively.
 
-The work hypothesizes that although rhythmic accuracy is proven to be most effective through discrete audible means [source] there will be improvement shown when the interstitial beat is occupied with a continuous wave across the modality of touch at slower tempo, when space between successive beats is significantly spread apart, as well as throughout the occurrence of unpredictable or dynamically changing events. 
+The work hypothesizes that although rhythmic accuracy is proven to be most effective through discrete audible means, there will be improvement shown when the interstitial beat is occupied with a continuous wave across the modality of touch at slower tempi (where space between successive beats is significantly spread apart) as well as throughout the occurrence of unpredictable or dynamically changing events. 
 
 Furthermore, the wearable haptic will provide an inconspicuous and silent gestural system key towards future entrainment studies in expressive performance.
