--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -2,30 +2,29 @@
 
 \chapter{Introduction} \label{secIntro}
 
-Introduction.
+\subsection{Background}
+In a traditional sense, the audible click of Maelzel's metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. However this representation is only half of the puzzle since the pendulum motion exhibited seeks to convey meaningful rhythmic information through the visual , much like the gestural motion of a conductor.
 
-\section{Installation instructions}
+The conductor "fills 100\% of the space between the crusis (the “click” moments of a beat) with a natural analogue wave that provides the build-up and decay common to natural happenings."[Haptic Enviro-Sensing Metronome, 5]
 
-This template was tested with TeX Live 2017, which includes all required packages~\cite{TUG2017}. Mac users: this is included as part of OSX and TeXShop. After successfully installing TeX Live, compile the PDF file using your favorite build tool (we tested with \verb!make! on OSX).
+Humans are one of the few species who exhibit the ability to synchronize to a beat. From a neurological perspective, it has been thought to be connected with the capacity for vocal learning. [CITE]
 
-\section{How to use this template}
-Write each chapter as a separate \LaTeX\ file and include them in \verb!thesis-main.tex!. Edit the abstract, acknowledgments, background, title, dedication, and funding files as necessary. Include additional packages in \verb!thesis-packages.tex! and define helpful macros in \verb!thesis-macros.tex!.
+The preceding research within the field of sensorimotor synchronization identifies an auditory advantage, or the dominance of auditory/motor connection within the task of beat synchronization. Recent studies have proven given meaningful spatiotemporal information, as in the bouncing ball example discussed in \verb!Section 2.2!, synchronization is almost as good as an auditory metronome.
 
-\subsection{Algorithms}
-Define each algorithm as a separate \LaTeX\ file in the algorithms folder using either the \verb!algorithmicx! or \verb!algpseudocode! packages. For example, see Algorithm~\ref{algTemplate}.
+\verb!REWORD THIS!:!
+The capacity to entrain motor behaviors to a beat is predictive (i.e., on average, taps slightly precede event onsets when tapping to a beat) and flexible (i.e., synchronization to an auditory beat is accurate for inter-beat intervals ranging from 300 to 900ms, with the most preferred inter-beat intervals being approximately 600ms).~\cite{repp2013sensorimotor}
 
-\input{algorithms/alg-template.tex}
+This work will focus on the expansion of this claim into the tactile realm, hypothesizing that:
 
+\subsection{Motivation}
 
+Eurythmics
 
-\section{Motivation}
-
-Eurythmics, Prof Neely
+Prof Neely
 
 Is there missing information from the daily practice of a trained musician to an audible metronome. 
 
 Consequentially, the following assumptions arise:
-
 
 From the work of Jacques Dalcroze, 
 
