--- a/Thesis/thesis-previousWork.tex
+++ b/Thesis/thesis-previousWork.tex
@@ -1,30 +1,32 @@
 \chapter{Previous Work}
 \section{Auditory Advantage}
-Extensive research into sensorimotor synchronization has proven that there exists a clear advantage of the discretely timed auditory stimulus as opposed to the visual and tactile counterparts. 
+Decades of research into sensorimotor synchronization has proven a clear advantage of the discretely timed auditory stimulus implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific. ~\cite{gan2015synchronization} The stability of beat synchronization to visual modalities (a flash of light) has been shown to be less stable that its auditory counterpart.
 
-Researchers from the human computer interaction group at the University of Tampere, Finland, conducted an experiment in 2008 to confirm that the instantaneous auditory modality dominates rhythmic perception. Tactile follows close suit with the visual modality being the least suitable for accurately perceiving rhythmic information as well as the most mentally demanding. Instead of the common tap based test, users were given two rhythmic sections and asked to determine whether they were identical or not across modalities as well as combinations of each. [Crossmodal rhythm perception, 3]
+Explain sensorimotor sych
 
-Tactile was personally preferred during the test over the other modalities but exploration of pulse length was called upon for further insight. 
+Research paper disc.
 
+Concrete examples/figures?
 
-
-Research paper examples/discussion
-
+\subsection{Rhythmic Perception}
+Though seemingly a separate realm of study, the field of rhythmic perception represents an important contribution to the overall understanding of sensorimotor synchronization. The work involves measurement of the ability to recognize different rhythmic patterns to different stimuli in a listen and respond type of fashion. Researchers from the human computer interaction group at the University of Tampere, Finland, conducted an experiment in 2008 to confirm that the instantaneous auditory modality dominates rhythmic perception. Tactile follows close suit with the visual modality being the least suitable for accurately perceiving rhythmic information as well as the most mentally demanding. Rather than the traditional tap based test, users were given two rhythmic sections and asked to determine whether they were identical or not across modalities as well as combinations of each. ~\cite{jokiniemi2008crossmodal} Even though it yielded less correct results the tactile modality was, from the users point of view, almost as good as the auditory modality. Exploration of pulse length was called upon for further insight.
 
 \section{A Continuous Visual Metronome}
+In a novel advancement challenging the auditory advantage and perhaps paving the way towards a more meaningful gesture, researchers in the Psychology department at Sun Yat-Sin University in Guangdong found continuous motion of a bouncing ball to be as stable as synchronization to an auditory metronome.
+
 Bouncing ball paper discussion.
 
-Furthermore, an 2014 experiment by the Department of Psychology at Sun Yat-Sen University in Guangdong, China, explored tap synchronization to a visual of a bouncing ball and found that it was not less stable than to an auditory metronome. [Synchronization to a bouncing ball with a realistic motion trajectory, 4]
+Furthermore, an 2014 experiment by the Department of Psychology at Sun Yat-Sen University in Guangdong, China, explored tap synchronization to a visual of a bouncing ball and found that it was not less stable than to an auditory metronome ~\cite{gan2015synchronization}.
 
 
 \section{The Tactile Modality}
-A 2016 study by the Department of Psychology at Ryerson University considered whether the auditory advantage persisted across the tactile modality. The experiment was a tap test of non musicians put through a series of simple and complex rhythmic sequences with a varied area of haptic stimulation. In conditions involving a large area of stimulation and simple rhythmic sequences, tactile synchronization closely matched auditory. They proved that if made salient enough, “the accuracy of synchronization to a tactile metronome can equal synchronization to an auditory metronome, further challenging the idea of an auditory advantage over all other modalities for synchronization to discretly timed rhythmic stimuli.” However, auditory won out for synchronization of complex rhythmic sequences.
+A 2016 study by the Department of Psychology at Ryerson University considered whether the auditory advantage persisted across the tactile modality. The experiment was a tap test of non musicians put through a series of simple and complex rhythmic sequences with a varied area of haptic stimulation. In conditions involving a large area of stimulation and simple rhythmic sequences, tactile synchronization closely matched auditory. They proved that if made salient enough, “the accuracy of synchronization to a tactile metronome can equal synchronization to an auditory metronome, further challenging the idea of an auditory advantage over all other modalities for synchronization to discretly timed rhythmic stimuli.” However, auditory won out for synchronization of complex rhythmic sequences. ~\cite{ammirante2016synchronizing}
 
 \section{Commercial Introspection}
-Peterson tuner BodyBeat Sync (\$140) seeks to revolutionize the traditional metronome through its extensive coverage of all three modalities with a wearable pulsing vibration unit which claims to “allow musicians to easily internalize the beat and develop a note value relationship both audibly and physically.” [6]
+Peterson tuner BodyBeat Sync (\$140) seeks to revolutionize the traditional metronome through its extensive coverage of all three modalities with a wearable pulsing vibration unit which claims to “allow musicians to easily internalize the beat and develop a note value relationship both audibly and physically.” [Peterson Citation]
 
 Ramp up/down as well as proof via quantification of this rhythmic internalization are missing.
 
-The Soundbrenner (\$99) is a vibration based metronome using an instantaneous pulse and claims that in freeing the ears, it has “brought the rhythm closer to the body, making it more comfortable and natural to feel the beat and swing of the music instead of chasing the click.” [7]
+The Soundbrenner (\$99) is a vibration based metronome using an instantaneous pulse and claims that in freeing the ears, it has “brought the rhythm closer to the body, making it more comfortable and natural to feel the beat and swing of the music instead of chasing the click.” [Soundbrenner Citation]
 
 Similarly, lack of ramp up/down as well as numerical proof.
