migrating to vscode

--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -9,7 +9,7 @@ The conductor "fills 100\% of the space between the crusis (the “click” mome
 
 Humans are one of the few species who exhibit the ability to synchronize to a beat. From a neurological perspective, it has been thought to be connected with the capacity for vocal learning. [CITE]
 
-The preceding research within the field of sensorimotor synchronization identifies an auditory advantage, or the dominance of auditory/motor connection within the task of beat synchronization. Recent studies have proven given meaningful spatiotemporal information, as in the bouncing ball example discussed in \verb!Section 2.2!, synchronization is almost as good as an auditory metronome.
+The preceding research within the field of sensorimotor synchronization identifies an auditory advantage, or the dominance of auditory/motor connection within the task of beat synchronization. However, recent studies have proven given meaningful spatiotemporal information, as in the bouncing ball example discussed in \verb!Section 2.2!, synchronization is almost as good as an auditory metronome.
 
 \verb!REWORD THIS!:!
 The capacity to entrain motor behaviors to a beat is predictive (i.e., on average, taps slightly precede event onsets when tapping to a beat) and flexible (i.e., synchronization to an auditory beat is accurate for inter-beat intervals ranging from 300 to 900ms, with the most preferred inter-beat intervals being approximately 600ms).~\cite{repp2013sensorimotor}
