--- a/Thesis/thesis-previousWork.tex
+++ b/Thesis/thesis-previousWork.tex
@@ -1,6 +1,6 @@
 \chapter{Previous Work}
 \section{Auditory Advantage}
-Decades of research into sensorimotor synchronization has proven a clear advantage of the discretely timed auditory stimulus implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific. ~\cite{gan2015synchronization} The stability of beat synchronization to visual modalities (a flash of light) has been shown to be less stable that its auditory counterpart.
+Decades of research into sensorimotor synchronization presents a clear advantage of the discretely timed auditory stimulus implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific. ~\cite{gan2015synchronization} The stability of beat synchronization to visual modalities (a flash of light) has been shown to be less stable that its auditory counterpart.
 
 Explain sensorimotor sych
 
@@ -13,6 +13,8 @@ Though seemingly a separate realm of study, the field of rhythmic perception rep
 
 \section{A Continuous Visual Metronome}
 In a novel advancement challenging the auditory advantage and perhaps paving the way towards a more meaningful gesture, researchers in the Psychology department at Sun Yat-Sin University in Guangdong found continuous motion of a bouncing ball to be as stable as synchronization to an auditory metronome.
+
+
 
 Bouncing ball paper discussion.
 
