--- a/Thesis/thesis-hapticDesign.tex
+++ b/Thesis/thesis-hapticDesign.tex
@@ -1,5 +1,6 @@
 \chapter{Haptic Design}
-\section{Motivation}
-I was motivated to write a Phd thesis because I did not want to work directly after finishing my study
-\section{Organization}
-This thesis is organized as follows, ...
+\section{Requirements}
+
+\section{Design Challenges}
+
+\section{Optimization}	
