--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -6,7 +6,7 @@ Previous studies have shown that periodically bouncing ball stimuli moving with 
 The method which follows is a nature expansion of this ideology into the haptic domain.
 
 
-\secion{Arduino}
+\section{Arduino}
 \subsection{Tap Onset Latency Evaluation}
 
 A sensorimotor synchronization experiment was conducted to discover how auditory feedback to a tap onset could be presented with minimal latency and responses recorded with the most accuracy. It was found that not only was the auditory response latency the least for the Arduino system using a force sensitive resistor (mean = 0.6 ms, sd = 0.3), but it had missed the fewest taps and recorded the least superfluous responses as compared to a percussion pad with the FTAP and Max MSP systems [Tap Arduino, 1].
