changed bibstyle, texts updates

--- a/Thesis/np_thesis.tex
+++ b/Thesis/np_thesis.tex
@@ -131,7 +131,7 @@
 
 %\newcommand{\bibpreamble}{This text goes between the ``Bibliography''
 %  header and the actual list of references}
-\bibliographystyle{plainnat}
+\bibliographystyle{ieeetr}
 
 % No whitespace allowed in the reference files list, ever.
 \bibliography{bibliography/references}
