--- a/Thesis/thesis-abstract.tex
+++ b/Thesis/thesis-abstract.tex
@@ -7,14 +7,14 @@
 \noindent
 The interstice is an intervening space. When applied to a rhythmic context, the interstitial beat can be represented by two distinct states; whether energy exists within this small moment in time or if it does not. 
 
-Does filling the space provide an added awareness or preparation for the upcoming onset? Can the gestural motion of the conductor be justified scientifically?
+Does filling the space provide an added awareness or preparation for upcoming onsets? Can the gestural motion of the conductor be justified scientifically?
 
-The underlying question when applied to either the daily practice of a trained musician or the innate entrainment, external rhythmic synchronization, of the average human being, is whether the space between the beat matters.
+Nevertheless, the underlying question when applied to either the daily practice of a trained musician or the innate entrainment (external rhythmic synchronization) of the average human being, is whether the space between the beat matters.
 
 The objective of this work is to display whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization test cases spanning the modalities of sight, sound, and touch will be conducted across groups of musicians, amateurs, and non-musicians.
 
 Ancillary to this work, a haptic wearable design is prototyped and evaluated for optimization of physical spacing with an overarching goal of communicating dynamic changes more effectively.
 
-The work hypothesizes that although rhythmic accuracy is proven to be most effective through discrete audible means, there will be improvement shown when the interstitial beat is occupied with a continuous wave across the modality of touch at slower tempi (where space between successive beats is significantly spread apart) as well as throughout the occurrence of unpredictable or dynamically changing events. 
+Although rhythmic accuracy is proven to be most effective through discrete audible means, the work hypothesizes that there will be improvement shown when the interstitial beat is occupied with a continuous wave across the modality of touch at slower tempi, where space between successive beats is significantly spread apart, as well as throughout the occurrence of unpredictable or dynamically changing events. 
 
-Furthermore, the wearable haptic will provide an inconspicuous and silent gestural system key towards future entrainment studies in expressive performance.
+Furthermore, the wearable haptic will provide an inconspicuous yet meaningful gestural system key towards future entrainment studies in expressive performance.
