--- a/Thesis/thesis-acknowledgments.tex
+++ b/Thesis/thesis-acknowledgments.tex
@@ -5,12 +5,14 @@
 \setlength{\parindent}{0em}
 
 \noindent
-First and foremost to my advisor and the original inceptor of this work, Professor Stephen Neely. Our weekly discussions kept me on the right path. Thank you for the guidance and experience you brought to this project. I hope this proves to be exemplary to your design research as well as the framework for future work to come.
+First and foremost to whom ideation credit is due, my advisor Professor Stephen Neely. Our weekly discussions kept me on the right path. Thank you for the guidance and experience you brought to this project. I hope this proves to be exemplary to your design research as well as the framework for future work to come.
 
-Tom,
+To Professor Sullivan and Stiles for their accessibility, open-mindedness, and overall support from both a creative and technical standpoint.
 
-Riccardo, support
+To Professor Riccardo Schulz for taking the time to read through this paper and for the unending care and devotion you show to all of your students. You truly are one of the most kind spirited and genuine people I will ever meet.
 
 To my roommates and close friends, Mike and Craig. For those long nights of brainstorming possibilities and troubleshooting. Thank you for not only being my think tank but for keeping me inspired and grounded.
+
+To my fellow colleagues Anirudh and Garrett for the drive, motivation, and camaraderie we have been able to experience these past two years.
 
 Last but not least, a special thank you for the undying love and support of Rachel, for keeping the light at the end of the tunnel shining and maintaining my focus toward the end goal.
