--- a/Thesis/thesis-funding.tex
+++ b/Thesis/thesis-funding.tex
@@ -4,4 +4,4 @@
 \setlength{\parskip}{1em}
 \setlength{\parindent}{0em}
 
-This work was supported by robot fans.
+This work was supported by Professor Stephen Neely.
