--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -1,11 +1,28 @@
 % -*- mode:LaTex; mode:visual-line; mode:flyspell; fill-column:75-*-
 
 \chapter{Introduction} \label{secIntro}
+\subsection{Motivation}
+Prof Neely
+
+Eurythmics training
+
+Is there missing information from the daily practice of a trained musician to an audible metronome. 
+
+Consequentially, the following assumptions arise:
+
+What knowledge and/or science is missing?
+
+This research will add another dimension to each sensory modality to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythmic accuracy with the potential to impact future metronome implementations. 
+
 
 \subsection{Background}
+Brief metronome history
+
 In a traditional sense, the audible click of Maelzel's metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. However this representation is only half of the puzzle since the pendulum motion exhibited seeks to convey meaningful rhythmic information through the visual , much like the gestural motion of a conductor.
 
 The conductor "fills 100\% of the space between the crusis (the “click” moments of a beat) with a natural analogue wave that provides the build-up and decay common to natural happenings."[Haptic Enviro-Sensing Metronome, 5]
+
+Work of Jacques Dalcroze
 
 Humans are one of the few species who exhibit the ability to synchronize to a beat. From a neurological perspective, it has been thought to be connected with the capacity for vocal learning. [CITE]
 
@@ -15,21 +32,3 @@ The preceding research within the field of sensorimotor synchronization identifi
 The capacity to entrain motor behaviors to a beat is predictive (i.e., on average, taps slightly precede event onsets when tapping to a beat) and flexible (i.e., synchronization to an auditory beat is accurate for inter-beat intervals ranging from 300 to 900ms, with the most preferred inter-beat intervals being approximately 600ms).~\cite{repp2013sensorimotor}
 
 This work will focus on the expansion of this claim into the tactile realm, hypothesizing that:
-
-\subsection{Motivation}
-
-Eurythmics
-
-Prof Neely
-
-Is there missing information from the daily practice of a trained musician to an audible metronome. 
-
-Consequentially, the following assumptions arise:
-
-From the work of Jacques Dalcroze, 
-
-What knowledge and/or science is missing?
-
-This research will add another dimension to each sensory modality to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythmic accuracy with the potential to impact future metronome implementations. 
-
-
