--- a/Thesis/thesis-previousWork.tex
+++ b/Thesis/thesis-previousWork.tex
@@ -1,6 +1,7 @@
 \chapter{Previous Work}
 \section{Auditory Advantage}
-Decades of research into sensorimotor synchronization presents a clear advantage of the discretely timed auditory stimulus implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific. ~\cite{gan2015synchronization} The stability of beat synchronization to visual modalities (a flash of light) has been shown to be less stable that its auditory counterpart.
+Decades of research into sensorimotor synchronization presents a clear advantage of the discretely timed auditory stimulus implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific.
+~\cite{gan2015synchronization} The stability of beat synchronization to visual modalities (a flash of light) has been shown to be less stable that its auditory counterpart.
 
 Explain sensorimotor sych
 
