filling out motivation section

--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -51,3 +51,10 @@
   year={2013},
   publisher={Springer}
 }
+@book{fitts2008new,
+  title={The New Music Review and Church Music Review, 1901-1935: Keyword-author index: A capella-English text},
+  author={Fitts, Elizabeth Crouch},
+  volume={3},
+  year={2008},
+  publisher={Nisc}
+}
