--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -2,18 +2,17 @@
 
 \chapter{Introduction} \label{secIntro}
 \subsection{Motivation}
-Prof Neely
+While it is clear that nearly every professional musician has honed technique over countless hours of practice to an audible metronome, it is not directly obvious whether he/she has ingrained a true sense of rhythm at the foundational level with the primary instrument of expression, the body itself.
 
-Eurythmics training
+Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexposed to a student in training. Yet this ability, to perform in the spaces surrounding the beat, defines the difference between a rigid performance and one that flows with an elasticity and musical expression.
 
-Is there missing information from the daily practice of a trained musician to an audible metronome. 
+Is there missing information from the daily practice of a trained musician to an audible metronome? Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own "ebb and flow of rhythmical energy."\cite{fitts2008new}
 
-Consequentially, the following assumptions arise:
+It is this knowledge gap which Dalcroze Eurythmics seeks to fill as a curriculum developed by composer and educator Emile Jaques-Dalcroze to integrate natural musical expression via movement.  
 
-What knowledge and/or science is missing?
+From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely seeks to further explore the uncharted territory beneath the traditional metronome pitfall. Through his ongoing research into interstitial design, he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
 
-This research will add another dimension to each sensory modality to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythmic accuracy with the potential to impact future metronome implementations. 
-
+This research will add another dimension to each sensory modality to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythm awareness with the potential to impact future metronome implementations. 
 
 \subsection{Background}
 Brief metronome history
