--- a/Thesis/np_thesis.tex
+++ b/Thesis/np_thesis.tex
@@ -86,7 +86,7 @@
 \hypertarget{contents}{}
 \microtypesetup{protrusion=false}
 \tableofcontents
-\chapternote{\hspace{-12pt}When this dissertation is viewed as a PDF, the page header is a link to this Table of Contents.}
+% \chapternote{\hspace{-12pt}When this dissertation is viewed as a PDF, the page header is a link to this Table of Contents.}
 \clearpage
 \listoffigures
 \clearpage
