--- a/Thesis/thesis-title.tex
+++ b/Thesis/thesis-title.tex
@@ -4,11 +4,11 @@
 \author{Nick Pourazima}
 \date{May 19, 2018}
 \Year{2018}
-\trnumber{CMU-RI-TR-YY-NN}
+% \trnumber{CMU-RI-TR-YY-NN}
 
 \committee{
-Professor Thomas Sullivan \\
 Professor Stephen Neely \\
+Professor Thomas Sullivan \\
 Professor Jesse Stiles \\
 }
 
