--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -8,7 +8,7 @@ Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexpo
 
 Is there missing information from the daily practice of a trained musician to an audible metronome? Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own "ebb and flow of rhythmical energy."\cite{fitts2008new}
 
-It is this knowledge gap which Dalcroze Eurythmics seeks to fill as a curriculum developed by composer and educator Emile Jaques-Dalcroze to integrate natural musical expression via movement.  
+The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze to integrate natural musical expression via movement.  
 
 From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely seeks to further explore the uncharted territory beneath the traditional metronome pitfall. Through his ongoing research into interstitial design, he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
 
