--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -58,3 +58,12 @@
   year={2008},
   publisher={Nisc}
 }
+@article{polak2016both,
+  title={Both isochronous and non-isochronous metrical subdivision afford precise and stable ensemble entrainment: a corpus study of malian jembe drumming},
+  author={Polak, Rainer and London, Justin and Jacoby, Nori},
+  journal={Frontiers in neuroscience},
+  volume={10},
+  pages={285},
+  year={2016},
+  publisher={Frontiers}
+}
