--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -1,33 +1,42 @@
 % -*- mode:LaTex; mode:visual-line; mode:flyspell; fill-column:75-*-
 
 \chapter{Introduction} \label{secIntro}
-\subsection{Motivation}
+\section{Motivation}
 While it is clear that nearly every professional musician has honed technique over countless hours of practice to an audible metronome, it is not directly obvious whether he/she has ingrained a true sense of rhythm at the foundational level with the primary instrument of expression, the body itself.
 
 Intrinsic awareness to subtle nuances of tempo remains a subject commonly unexposed to a student in training. Yet this ability, to perform in the spaces surrounding the beat, defines the difference between a rigid performance and one that flows with an elasticity and musical expression.
 
-Is there missing information from the daily practice of a trained musician to an audible metronome? Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own "ebb and flow of rhythmical energy."\cite{fitts2008new}
+Is there missing information from the daily practice of a trained musician to an audible metronome? Although an excellent tool in establishing a sense of musical time and precision, the danger in use of such a mechanical object lies within the mathematical exactitude according to American composer and music critic Daniel Gregory Mason. Therefore manifesting a lifelessness where instead a living and breathing musical entity should exist with its own ``ebb and flow of rhythmical energy.''\cite{fitts2008new}
 
 The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a curriculum developed by composer and educator Emile Jaques-Dalcroze to integrate natural musical expression via movement.  
 
-From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely seeks to further explore the uncharted territory beneath the traditional metronome pitfall. Through his ongoing research into interstitial design, he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
+From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely has sought to further explore interstitial design. Through his research he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
 
 This research will add another dimension to each sensory modality to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythm awareness with the potential to impact future metronome implementations. 
 
-\subsection{Background}
-Brief metronome history
+\section{Background}
+\subsection{Brief metronome history}
 
 In a traditional sense, the audible click of Maelzel's metronome minimizes the interstitial space with an instantaneous (or discrete) impulse signal. However this representation is only half of the puzzle since the pendulum motion exhibited seeks to convey meaningful rhythmic information through the visual , much like the gestural motion of a conductor.
 
-The conductor "fills 100\% of the space between the crusis (the “click” moments of a beat) with a natural analogue wave that provides the build-up and decay common to natural happenings."[Haptic Enviro-Sensing Metronome, 5]
+\subsection{The conductor}
 
-Work of Jacques Dalcroze
+The conductor ``fills 100\% of the space between the crusis (the “click” moments of a beat) with a natural analogue wave that provides the build-up and decay common to natural happenings.''[Haptic Enviro-Sensing Metronome, 5]
+
+\subsection{Jacques Dalcroze}
+
+\subsection{Entrainment}
 
 Humans are one of the few species who exhibit the ability to synchronize to a beat. From a neurological perspective, it has been thought to be connected with the capacity for vocal learning. [CITE]
 
-The preceding research within the field of sensorimotor synchronization identifies an auditory advantage, or the dominance of auditory/motor connection within the task of beat synchronization. However, recent studies have proven given meaningful spatiotemporal information, as in the bouncing ball example discussed in \verb!Section 2.2!, synchronization is almost as good as an auditory metronome.
-
 \verb!REWORD THIS!:!
 The capacity to entrain motor behaviors to a beat is predictive (i.e., on average, taps slightly precede event onsets when tapping to a beat) and flexible (i.e., synchronization to an auditory beat is accurate for inter-beat intervals ranging from 300 to 900ms, with the most preferred inter-beat intervals being approximately 600ms).~\cite{repp2013sensorimotor}
+
+\subsection{The field of sensorimotor synchronization}
+The realm of research surrounding the psychology of rhythm is grounded within the framework of \textit{sensorimotor synchronization} (\textit{SMS}); defined as the coordination of rhythmic movement to an external rhythm. 
+
+\textbf{NOT IMPORTANT? SMS studies, conducted by Van Noorden and De Bruyn, of 600 children aged 3-11 has shown that adaptation to tempo was evident from 5 years and up. \cite{repp2013sensorimotor} }
+
+SMS research historically identifies what is known as an auditory advantage, or the dominance of auditory/motor connection within the task of beat synchronization. The auditory advantage is discussed in detail in \verb!Section 2.1!. However, recent studies have proven given meaningful spatiotemporal information, as in the bouncing ball example discussed in \verb!Section 2.2!, synchronization is almost as good as an auditory metronome.
 
 This work will focus on the expansion of this claim into the tactile realm, hypothesizing that:
