--- a/Thesis/thesis-previousWork.tex
+++ b/Thesis/thesis-previousWork.tex
@@ -3,24 +3,21 @@
 Decades of research into sensorimotor synchronization presents a clear advantage of the discretely timed auditory stimulus implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific.
 ~\cite{gan2015synchronization} The stability of beat synchronization to visual modalities (a flash of light) has been shown to be less stable that its auditory counterpart.
 
-Explain sensorimotor synch
 
-Research paper disc.
+
+
 
 Concrete examples/figures?
 
-\subsection{Rhythmic Perception}
+\section{Rhythmic Perception}
 Though seemingly a separate realm of study, the field of rhythmic perception represents an important contribution to the overall understanding of sensorimotor synchronization. The work involves measurement of the ability to recognize different rhythmic patterns to different stimuli in a listen and respond type of fashion. Researchers from the human computer interaction group at the University of Tampere, Finland, conducted an experiment in 2008 to confirm that the instantaneous auditory modality dominates rhythmic perception. Tactile follows close suit with the visual modality being the least suitable for accurately perceiving rhythmic information as well as the most mentally demanding. Rather than the traditional tap based test, users were given two rhythmic sections and asked to determine whether they were identical or not across modalities as well as combinations of each. ~\cite{jokiniemi2008crossmodal} Even though it yielded less correct results the tactile modality was, from the users point of view, almost as good as the auditory modality. Exploration of pulse length was called upon for further insight.
 
 \section{A Continuous Visual Metronome}
 In a novel advancement challenging the auditory advantage and perhaps paving the way towards a more meaningful gesture, researchers in the Psychology department at Sun Yat-Sin University in Guangdong found continuous motion of a bouncing ball to be as stable as synchronization to an auditory metronome.
-
+~\cite{gan2015synchronization}
 
 
 Bouncing ball paper discussion.
-
-Furthermore, an 2014 experiment by the Department of Psychology at Sun Yat-Sen University in Guangdong, China, explored tap synchronization to a visual of a bouncing ball and found that it was not less stable than to an auditory metronome ~\cite{gan2015synchronization}.
-
 
 \section{The Tactile Modality}
 A 2016 study by the Department of Psychology at Ryerson University considered whether the auditory advantage persisted across the tactile modality. The experiment was a tap test of non musicians put through a series of simple and complex rhythmic sequences with a varied area of haptic stimulation. In conditions involving a large area of stimulation and simple rhythmic sequences, tactile synchronization closely matched auditory. They proved that if made salient enough, “the accuracy of synchronization to a tactile metronome can equal synchronization to an auditory metronome, further challenging the idea of an auditory advantage over all other modalities for synchronization to discretely timed rhythmic stimuli.” However, auditory won out for synchronization of complex rhythmic sequences. ~\cite{ammirante2016synchronizing}
